# rsdedup

./: CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  PROBLEMS.txt  README.md
.github/workflows/: release.yml
docs/: book.toml
docs/src/: SUMMARY.md  cache.md  commands.md  comparison.md  design.md  exit-codes.md  filtering.md  getting-started.md  hashing.md  installation.md  introduction.md  output.md  parallelism.md
docs/src/commands/: cache.md  complete.md  completions.md  dedup.md  version.md
src/: action.rs  cache.rs  cli.rs  compare.rs  error.rs  grouper.rs  hasher.rs  main.rs  output.rs  scanner.rs  types.rs
tests/: integration.rs
